CLEAN CODE & SOLID ( WEB SOCKET)